Fixed More menu not displaying correctly in dark mode + other fixes and improvements

--- a/onetab.css
+++ b/onetab.css
@@ -25,7 +25,7 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
-textarea, #settingsDiv {
+textarea, #settingsDiv, .moreButton > div {
   background-color: rgb(240, 240, 240);
 }
 
@@ -33,7 +33,23 @@ textarea, #settingsDiv {
   cursor:pointer;
 }
 
-input[type=text] {
+.tab {
+  border: 0;
+  padding: 7px 12px;
+  background-color: rgb(251, 251, 251);
+  box-shadow: 0 0.4px 1px rgba(0,0,0,.3);
+  margin-bottom: 6px;
+}
+
+.icon {
+  font-family: SegoeIcons;
+}
+
+#headerText {
+  padding-left: 70px!important;
+}
+
+/* input[type=text] {
   padding: 4px 4px;
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -41,7 +57,7 @@ input[type=text] {
   -moz-box-shadow: 2px 2px 3px #ddd;
   outline: 0;
   -webkit-appearance: textfield;
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   * {
@@ -52,7 +68,11 @@ input[type=text] {
     background-color: rgb(30, 30, 30);
   }
 
-  textarea, #settingsDiv {
-    background-color: rgb(0, 0, 0);
+  textarea, #settingsDiv, .moreButton > div {
+    background-color: rgb(0, 0, 0)!important;
+  }
+
+  .tab {
+    background-color: rgb(45,45,45);
   }
 }
